@@ -1,7 +1,7 @@
 #
 # Makefile gnucobol
 #
-# Copyright (C) 2003-2012, 2014-2019 Free Software Foundation, Inc.
+# Copyright (C) 2003-2012, 2014-2020 Free Software Foundation, Inc.
 # Written by Keisuke Nishida, Roger While, Simon Sobisch
 #
 # This file is part of GnuCOBOL.
@@ -30,7 +30,8 @@ BUILT_SOURCES = defaults.h
 DISTCLEANFILES = $(BUILT_SOURCES)
 # CLEANFILES = $(bin_SCRIPTS)
 dist_noinst_SCRIPTS = autogen.sh build_aux/bootstrap po/update_linguas.sh \
-	build_aux/create_win_dist.sh build_aux/create_mingw_bindist.sh
+	build_aux/create_win_dist.sh build_aux/create_mingw_bindist.sh \
+	doc/cobcinfo.sh
 
 # wrapper for the build environment
 noinst_SCRIPTS = pre-inst-env
