@@ -1,44 +1,0 @@
-#! /bin/sh
-#
-# return_path gnucobol
-#
-# Copyright (C) 2015,2017,2020 Free Software Foundation, Inc.
-# Written by Simon Sobisch, 
-#
-# This file is part of GnuCOBOL.
-#
-# The GnuCOBOL compiler is free software: you can redistribute it
-# and/or modify it under the terms of the GNU General Public License
-# as published by the Free Software Foundation, either version 3 of the
-# License, or (at your option) any later version.
-#
-# GnuCOBOL is distributed in the hope that it will be useful,
-# but WITHOUT ANY WARRANTY; without even the implied warranty of
-# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-# GNU General Public License for more details.
-#
-# You should have received a copy of the GNU General Public License
-# along with GnuCOBOL.  If not, see <https://www.gnu.org/licenses/>.
-
-# possible path conversion for running the testsuite in an environment
-# that doesn't match the one where the tested binaries were built
-
-if ! test "$1" = "convert"; then
-	echo "$1"
-else
-
-	shift
-	
-	# Note: not needed for running the testsuite with MSYS as this translates the path
-	if test "$OSTYPE" = "cygwin"; then
-		cygpath -pw "$1"
-	else
-		# check for WSL / Bash on Windows; ignore error messages (file not available)
-		if $(grep -q "Microsoft" /proc/sys/kernel/osrelease 2>/dev/null); then
-			wslpath -w "$1"
-		else
-			echo "$1"
-		fi
-	fi
-
-fi
