@@ -1,10 +1,4 @@
 
-2020-02-02  Simon Sobisch <simonsobisch@gnu.org>
-
-	* return_path: extra build script to be used outside of the testsuite
-	  (mostly extracted from tests/atlocal_win)
-	* Makefile.am: include return_path as dist_noinst_SCRIPTS
-
 2019-06-05  Simon Sobisch <simonsobisch@gnu.org>
 
 	* Makefile.am: gcdiff - removed extra link and compiler flags fixing
@@ -230,7 +224,7 @@
 	  then you can switch easily.
 
 
-Copyright 2004-2008,2010,2012,2014-2020 Free Software Foundation, Inc.
+Copyright 2004-2008,2010,2012,2014-2019 Free Software Foundation, Inc.
 
 Copying and distribution of this file, with or without modification, are
 permitted provided the copyright notice and this notice are preserved.
